# dinja

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pylintrc  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  TODO.md  build.sh  commit.sh  docker-compose.yml  pyproject.toml  release.py  release.sh  run.sh
.claude/: settings.local.json
.claude/commands/: build.md  cleanup.md  commit.md  dev-setup.md  example.md  lint.md  release-status.md  release.md  test.md
.dev-ops/: DEVELOPMENT.md  RELEASE.md
.github/workflows/: README.md  docker-build-manual.yml  docker-release.yml  npm-publish-manual.yml  npm-publish-release.yml  publish-python-manual.yml  release.yml
clients/go/: README.md  go.mod  renderer.go  renderer_test.go  types.go
clients/js/: package-lock.json  package.json
clients/js/src/: index.ts
clients/js/test/: basic.test.js
clients/py/dinja/: __init__.py
clients/py/tests/: README.md
core/: Cargo.toml
core/benches/: render_benchmark.rs
core/examples/: test_render.rs
core/src/: error.rs  handlers.rs  lib.rs  main.rs  mdx.rs  models.rs  service.rs  transform.rs
core/src/renderer/: constants.rs  engine.rs  mod.rs  pool.rs  runtime.rs  scripts.rs
core/static/: engine.min.js  engine_to_string.min.js  helpers.js
core/tests/: edge_cases.md  output_formats_test.rs
docs/: PERFORMANCE.md  README.md  docs.sh  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/assets/css/: logo.css
docs/docs/development/: building.md  contributing.md  testing.md
docs/docs/getting-started/: installation.md  quick-start.md
docs/docs/guides/: components.md  decorators.md  output-formats.md  performance.md
docs/docs/python/: dataclasses.md  examples.md  overview.md  renderer.md
docs/docs/rust/: overview.md  render-service.md
examples/basic/: main.py  pyproject.toml
examples/client/: main.py  pyproject.toml  test_automated.py
examples/js-binding/: example.js  index.html  package.json  pnpm-lock.yaml  server.js
examples/js-binding/src/: app.jsx  main.ts  style.css
frontend-utils/core/: core.js
frontend-utils/devs-playground/: index.html  package.json  pnpm-lock.yaml
frontend-utils/devs-playground/src/: app.tsx
frontend-utils/devs-playground/src/tests/: comp.js  core.js
frontend-utils/preact/: package.json  pnpm-lock.yaml
frontend-utils/preact-render-to-string/: package.json  pnpm-lock.yaml
frontend-utils/preact-render-to-string/src/: index.js
hooks/: install.sh  pre-commit
js-bindings/: .gitignore  Cargo.toml  PUBLISHING.md  README.md  example.js  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  wrapper.js
js-bindings/src/: index.ts  lib.rs
js-bindings/test/: basic.test.js  components.test.js
python-bindings/: .maturinignore  Cargo.toml  README.md  pyproject.toml
python-bindings/dinja/: __about__.py  __init__.py  async_client.py
python-bindings/examples/: basic_example.py  example.py  readme_example.py  renderer_example.py
python-bindings/src/: lib.rs
python-bindings/tests/: README.md  test_render.py  test_v8_isolate.py
scripts/: docs.py  resize_logo.py
src/dinja/: __init__.py
tests/: test_dinja.py
tests/templates/: content_tag.html
utils/: README.md  build.sh  docker-build.sh  run.sh
