[workspace]
members = ["core", "python-bindings"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["dinja contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dinja"

[workspace.dependencies]
# Shared dependencies can be added here
