[workspace]
members = ["core", "python-bindings", "js-bindings"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["dinja contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/hlop3z/dinja"
description = "Safe MDX renderer with a Rust core and Python bindings"
readme = "README.md"
documentation = "https://github.com/hlop3z/dinja#readme"

[workspace.dependencies]
# Shared dependencies can be added here
