[package]
name = "dinja-js-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"
documentation.workspace = true

[lib]
name = "dinja_js_bindings"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi9", "tokio_rt"] }
napi-derive = "3"
dinja-core = { path = "../core" }
serde_json = "1.0.145"
once_cell = "1.19"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
