[package]
name = "dinja-python-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"  # Use local README.md instead of workspace one to avoid conflict
documentation.workspace = true

[lib]
name = "dinja_python_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py313"] }
dinja-core = { path = "../core" }
serde_json = "1.0.145"
once_cell = "1.19"
