[project]
name = "dinja"
version = "0.1.0"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]

[project.urls]
Homepage = "https://github.com/hlop3z/dinja"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "dinja"
bindings = "pyo3"
# compatibility = ["linux", "macos", "windows"]
