[project]
name = "dinja"
version = "0.4.3"
description = "Safe, deterministic MDX rendering powered by a Rust core with batteries-included Python bindings"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
license = { text = "BSD-3-Clause" }

[project.urls]
Homepage = "https://github.com/hlop3z/dinja"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "dinja._native"
bindings = "pyo3"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
# compatibility = ["linux", "macos", "windows"]
