[project]
name = "dinja"
dynamic = ["version"]
description = "HTTP client for the Dinja MDX rendering service"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
license = { text = "BSD-3-Clause" }

[project.urls]
Homepage = "https://github.com/hlop3z/dinja"
Documentation = "https://github.com/hlop3z/dinja#readme"
Repository = "https://github.com/hlop3z/dinja"
Issues = "https://github.com/hlop3z/dinja/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dinja/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["dinja"]

[tool.hatch.build.targets.sdist]
include = [
    "/dinja",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
