[project]
name = "dinja-docs"
version = "0.1.0"
description = "Documentation for Dinja MDX renderer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.32",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocstrings[python]>=0.25.2",
    "termynal>=0.12.1",
    "mkdocs-minify-plugin>=0.7.0",
    "dinja>=0.3.0",
]
